@@ -39,7 +39,10 @@ mod_rivet_la_SOURCES = \
 	mod_rivet.h TclWeb.h \
 	apache_multipart_buffer.h \
 	apache_request.h \
-	../rivetCore.c
+	../rivetCore.c \
+	../rivetWWW.c \
+	../rivetChannel.c \
+	../rivetParser.c
 
 mod_rivet_la_LDFLAGS = @TCL_LIB_SPEC@ @APXS_LDFLAGS@ -module -avoid-version
 mod_rivet_la_LIBADD = @TCL_LIBS@ @APXS_LIBS@
