@@ -1,3 +1,8 @@
+2007-08-29  David N. Welton  <davidw@dedasys.com>
+
+	* src/apache-1/Makefile.am: Another patch from Valery correcting
+	a mistaken application of his patches on my part.
+
 2007-08-27  David N. Welton  <davidw@dedasys.com>
 
 	* configure.ac: Added missing quote.
